# EnergyLedgerPallet

./: .gitignore  README.md
pallets/oracle/: Cargo.toml
pallets/oracle/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
